@startuml tecton

Tecton *-- "0..*" Spore
Tecton *-- "0..*" MushroomStem
Tecton *-- "0..*" MushroomThread
Tecton *-- "0..*" Insect
Tecton --- "0..*" Tecton
class Tecton implements IRound, ISpore, IStem, IThread{
    spores : List<Spore>
    stems : List<MushroomStem>
    threads : List<MushroomThread>
    neighbours : List<Tecton>
    insects : List<Insect>
    getSporeCount(p : Player) : Integer
    hasStem() : Boolean
    addNeighbour(t : Tecton) : void
    addInsect(i : Insect) : void
}

class StemlessTecton extends Tecton {}
class ThreadConsumingTecton extends Tecton {}
class SingleThreadedTecton extends Tecton {}
@enduml